completed method fuegeUrlaubsterminHinzu in aggregate student